--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="style/header__and__footer.css">
 <link rel="shortcut icon" href="src/logo.png">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="viewport" content="width=1920">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 <body>
@@ -37,6 +37,27 @@
 	</header>
 </section>
 
+<section class="header__mobile">
+	<header class="header__mobile">
+		<a href="index.html" class="header__logo">
+			<img src="src/logo.png" class="header__logo-img">
+			<div class="header__logo-text">
+				<div class="header__logo-title">LazyCote</div>
+				<div class="header__logo-subtitle">team</div>
+			</div>
+		</a>
+		<svg height="100%" class="burger" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;" version="1.1" viewBox="0 0 24 24" width="100%" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:serif="http://www.serif.com/" xmlns:xlink="http://www.w3.org/1999/xlink"><g id="Icon"><path d="M4,6.75l16,0c0.414,0 0.75,-0.336 0.75,-0.75c0,-0.414 -0.336,-0.75 -0.75,-0.75l-16,0c-0.414,0 -0.75,0.336 -0.75,0.75c0,0.414 0.336,0.75 0.75,0.75Z"/><path d="M4,12.75l16,0c0.414,0 0.75,-0.336 0.75,-0.75c0,-0.414 -0.336,-0.75 -0.75,-0.75l-16,0c-0.414,0 -0.75,0.336 -0.75,0.75c0,0.414 0.336,0.75 0.75,0.75Z"/><path d="M4,18.75l16,0c0.414,0 0.75,-0.336 0.75,-0.75c0,-0.414 -0.336,-0.75 -0.75,-0.75l-16,0c-0.414,0 -0.75,0.336 -0.75,0.75c0,0.414 0.336,0.75 0.75,0.75Z"/></g></svg>
+	</header>
+	
+</section>
+<div class="menu__drop">
+			<ul class="menu__drop-ul">
+				<li ><a href="index.html" class="menu__drop-li">Главная</a></li>
+				<li ><a href="project.html" class="menu__drop-li">Проекты</a></li>
+				<li ><a href="about.html" class="menu__drop-li">О нас</a></li>
+			</ul>
+</div>
+
 <section class="selector">
 	<div class="selector__container">
 		<ul class="selector__container-ul">
@@ -47,7 +68,7 @@
 							<ul class="container__ul-php_drop ul-js_drop">
 							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">Что такое JavaScript?</a>
 							</li>
-							<li class="container__li-php_drop"><a  href="blog/js_kak_podluchit.html" class="container__li-php_drop">Как подключить файл JavaScript?</a>
+							<li class="container__li-php_drop"><a  href="blog/js_kak_podluchit.html" class="container__li-php_drop">Как подключить?</a>
 							</li>
 							</ul>
 					</li>
