--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <link rel="stylesheet" href="style/index.css">
 <link rel="stylesheet" href="style/header__and__footer.css">
+<link rel="stylesheet" href="style/index__mobile.css">
 <link rel="shortcut icon" href="src/logo.png">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
