--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
 		<div class="info__container-one">
 			<img src="src/folder_icon_125280.png" class="info__container__one-img">
 			<div class="info__container__one-text">
-				<div class="info__container__one__text-title">1</div>
-				<div class="info__container__one__text-subtitle">проект</div>
+				<div class="info__container__one__text-title sec_title_info">1</div>
+				<div class="info__container__one__text-subtitle sec_subtitle_info">проект</div>
 			</div>
 		</div>
 	</div>
