--- a/project.html
+++ b/project.html
@@ -8,6 +8,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,700;1,500&display=swap" rel="stylesheet">
 
 <link rel="stylesheet" href="style/project.css">
+<link rel="stylesheet" href="style/project__mobile.css">
 <link rel="stylesheet" href="style/header__and__footer.css">
 <link rel="shortcut icon" href="src/logo.png">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
