--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
 		<div class="header__two__container-link">
 			<ul class="header__two__container-link-ul">
 				<li class="header__two__container-link-li">
-					<a href="https://s2d1ent.github.io/LazyCote/" class="header__two__container-link-li" target="_blank">WebSite</a>
+					<a href="https://lazycote.github.io/LazyCote/" class="header__two__container-link-li" target="_blank">WebSite</a>
 				</li>
 				<li class="header__two__container-link-li">lcilyavitya@gmail.com</li>
 				<li class="header__two__container-link-li">
