--- a/news.html
+++ b/news.html
@@ -8,6 +8,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,700;1,500&display=swap" rel="stylesheet">
 
 <link rel="stylesheet" href="style/news.css">
+<link rel="stylesheet" href="style/news__mobile.css">
 <link rel="stylesheet" href="style/header__and__footer.css">
 <link rel="shortcut icon" href="src/logo.png">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -69,20 +70,20 @@
 <section class="news">
 	<div class="news__container">
 		<div class="container__line">
-			<a href="news/redesign.html" target="_blank">
+			
+			
+
+<!--  -->	<a href="news/redesign.html" target="_blank">
 				<div class="container__line-block">
 					<img src="src/1jffKEd0PnE.jpg" class="container__line-img">
 					<div class="line__block-title">Редизайн</div>
 					<div class="line__block-subtitle">Сегодня был закончен редизайн сайта. Так как сайт максимально убого выглядел...</div>
 				</div>
-			</a>
-			<a href="game__layouts.html" target="_blank">
-				<div class="container__line-block">
-					<img src="src/stol-okno-noutbuk-kaktus-boke.jpg" class="container__line-img">
-					<div class="line__block-title">Заголовок новости</div>
-					<div class="line__block-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt...</div>
-				</div>
-			</a>
+<!--  -->	</a>
+
+
+
+
 		</div>
 		
 	</div>
