--- a/news__layouts.html
+++ b/news__layouts.html
@@ -7,11 +7,12 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,700;1,500&display=swap" rel="stylesheet">
 
-<link rel="stylesheet" href="style/news__layouts.css">
 <link rel="stylesheet" href="style/header__and__footer.css">
+<link rel="stylesheet" href="style/news__layouts.css">
+
 <link rel="shortcut icon" href="src/logo.png">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="viewport" content="width=1920">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 <body>
@@ -36,19 +37,47 @@
 		</form>
 	</header>
 </section>
+<section class="header__mobile">
+	<header class="header__mobile">
+		<a href="index.html" class="header__logo">
+			<img src="src/logo.png" class="header__logo-img">
+			<div class="header__logo-text">
+				<div class="header__logo-title">LazyCote</div>
+				<div class="header__logo-subtitle">team</div>
+			</div>
+		</a>
+		<svg height="100%" class="burger" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;" version="1.1" viewBox="0 0 24 24" width="100%" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:serif="http://www.serif.com/" xmlns:xlink="http://www.w3.org/1999/xlink"><g id="Icon"><path d="M4,6.75l16,0c0.414,0 0.75,-0.336 0.75,-0.75c0,-0.414 -0.336,-0.75 -0.75,-0.75l-16,0c-0.414,0 -0.75,0.336 -0.75,0.75c0,0.414 0.336,0.75 0.75,0.75Z"/><path d="M4,12.75l16,0c0.414,0 0.75,-0.336 0.75,-0.75c0,-0.414 -0.336,-0.75 -0.75,-0.75l-16,0c-0.414,0 -0.75,0.336 -0.75,0.75c0,0.414 0.336,0.75 0.75,0.75Z"/><path d="M4,18.75l16,0c0.414,0 0.75,-0.336 0.75,-0.75c0,-0.414 -0.336,-0.75 -0.75,-0.75l-16,0c-0.414,0 -0.75,0.336 -0.75,0.75c0,0.414 0.336,0.75 0.75,0.75Z"/></g></svg>
+	</header>
+	
+</section>
+<div class="menu__drop">
+			<ul class="menu__drop-ul">
+				<li ><a href="index.html" class="menu__drop-li">Главная</a></li>
+				<li ><a href="project.html" class="menu__drop-li">Проекты</a></li>
+				<li ><a href="about.html" class="menu__drop-li">О нас</a></li>
+			</ul>
+</div>
+
+
 
 <section class="headertwo">
 	<div class="headertwo__container">	
 		<div class="container__banner">
-			
-			<img src="src/stol-okno-noutbuk-kaktus-boke.jpg" class="container__banner-img">
-			<div class="container__banner-title">НазваниеСтатьи</div>		
+			<div class="banner__container">
+				<img src="src/backDash.jpg" class="banner__container-img">
+				<div class="banner__container-title">Редизайн</div>
+			</div>
 		</div>
-		<div class="container__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br><br>
-
-Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo. Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore magnam aliquam quaerat voluptatem. <br><br>
-
-Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur? At vero eos et accusamus et iusto odio dignissimos ducimus, qui blanditiis praesentium voluptatum deleniti atque corrupti, quos dolores et quas molestias excepturi sint, obcaecati cupiditate non provident, similique sunt in culpa, qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</div>
+			<div class="description">
+				<div class="description__text">	Здарова народ, сегодня был закончен редизайн сайта. Так как сайт максимально убого выглядел, мы решили его подкорректировать и сделать минималистичным и более каким-то, нормальным что ли. Редизайн сайта сделан на данный момент только под ПК версию сайта, поэтому с версией под телефоны придется временно подождать, так как под пк делалася не адаптивная, а масштабируемая верстка, придется немного помучаться с версткой под телефон.<br><br>
+					Так же мы возвращаемся к работе. В скоре мы приступим к доделыванию нашего проекта<a href="../game/oleg.html" style="color: #fff; text-decoration: underline;">OLEG</a>. И надеемся, что в скоре мы его завершим. По выходу игры мы собираемся игру дорабатывать дальше, так как нужно будет добавлять новые уровни, чтобы игра была не короткой.<br><br>
+					<div class="photo">
+						<img src="src/GgecS0q9Tqk.jpg" class="image">
+						<img src="src/-jqOCfhS0EY.jpg" class="image">
+						<img src="src/303o5RuzoUI.jpg" class="image">	
+					</div>			
+				</div>
+			</div>		
 	</div>
 </section>
 
@@ -108,6 +137,6 @@ Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit la
 		</div>
 	</div>
 </footer>
-<script type="text/javascript" src="scripts/main__secondlvl.js"></script>
+<!-- <script type="text/javascript" src="scripts/main__secondlvl.js"></script> -->
 </body>
 </html>
