--- a/test.html
+++ b/test.html
@@ -2,25 +2,25 @@
 <html lang="ru">
 <head>
 	<script data-ad-client="ca-pub-6725342082633367" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-	<title>Блоки, теги и их связка.</title>
+	<title>LazyCote team</title>
 
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,700;1,500&display=swap" rel="stylesheet">
 
-<link rel="stylesheet" href="../style/header__and__footer.css">
-<link rel="stylesheet" href="../style/blog__layouts.css">
-<link rel="stylesheet" href="../style/blog_next_and_back_btn.css">
+<link rel="stylesheet" href="style/header__and__footer.css">
+<link rel="stylesheet" href="style/blog__layouts.css">
+<link rel="stylesheet" href="style/blog_next_and_back_btn.css">
 
-<link rel="shortcut icon" href="../src/logo.png">
+<link rel="shortcut icon" href="src/logo.png">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=1920">
 
 </head>
 <body>
 <section class="header">
 	<header class="header">
-		<a href="../index.html" class="header__logo">
-			<img src="../src/logo.png" class="header__logo-img">
+		<a href="index.html" class="header__logo">
+			<img src="src/logo.png" class="header__logo-img">
 			<div class="header__logo-text">
 				<div class="header__logo-title">LazyCote</div>
 				<div class="header__logo-subtitle">team</div>
@@ -28,9 +28,9 @@
 		</a>
 		<nav class="header__nav">
 			<ul class="header__nav-ul">
-				<li ><a href="../index.html" class="header__nav-li header__nav-li-first">Главная</a></li>
-				<li ><a href="../project.html" class="header__nav-li">Проекты</a></li>
-				<li ><a href="../about.html" class="header__nav-li">О нас</a></li>
+				<li ><a href="index.html" class="header__nav-li header__nav-li-first">Главная</a></li>
+				<li ><a href="project.html" class="header__nav-li">Проекты</a></li>
+				<li ><a href="about.html" class="header__nav-li">О нас</a></li>
 			</ul>
 		</nav>
 		<form class="header__search">
@@ -39,34 +39,11 @@
 	</header>
 </section>
 
-<section class="header__mobile">
-	<header class="header__mobile">
-		<a href="../index.html" class="header__logo">
-			<img src="../src/logo.png" class="header__logo-img">
-			<div class="header__logo-text">
-				<div class="header__logo-title">LazyCote</div>
-				<div class="header__logo-subtitle">team</div>
-			</div>
-		</a>
-		<svg height="100%" class="burger" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;" version="1.1" viewBox="0 0 24 24" width="100%" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:serif="http://www.serif.com/" xmlns:xlink="http://www.w3.org/1999/xlink"><g id="Icon"><path d="M4,6.75l16,0c0.414,0 0.75,-0.336 0.75,-0.75c0,-0.414 -0.336,-0.75 -0.75,-0.75l-16,0c-0.414,0 -0.75,0.336 -0.75,0.75c0,0.414 0.336,0.75 0.75,0.75Z"/><path d="M4,12.75l16,0c0.414,0 0.75,-0.336 0.75,-0.75c0,-0.414 -0.336,-0.75 -0.75,-0.75l-16,0c-0.414,0 -0.75,0.336 -0.75,0.75c0,0.414 0.336,0.75 0.75,0.75Z"/><path d="M4,18.75l16,0c0.414,0 0.75,-0.336 0.75,-0.75c0,-0.414 -0.336,-0.75 -0.75,-0.75l-16,0c-0.414,0 -0.75,0.336 -0.75,0.75c0,0.414 0.336,0.75 0.75,0.75Z"/></g></svg>
-	</header>
-	
-</section>
-<div class="menu__drop">
-			<ul class="menu__drop-ul">
-				<li ><a href="../index.html" class="menu__drop-li">Главная</a></li>
-				<li ><a href="../project.html" class="menu__drop-li">Проекты</a></li>
-				<li ><a href="../about.html" class="menu__drop-li">О нас</a></li>
-			</ul>
-</div>
-
-
-
 <section class="headertwo">
 	<div class="headertwo__container">	
 			<div class="container__banner">
 			<div class="banner__container">
-				<img src="../src/article.jpg" class="banner__container-img">
+				<img src="src/article.jpg" class="banner__container-img">
 				<div class="banner__container-title">Блоки, теги и их связка.</div>
 			</div>
 			</div>
@@ -250,10 +227,10 @@
 		<div class="footer__container-watermark">
 			<div class="footer__container__watermark-title">©s2d1ent - 2020</div>
 			<div class="footer__container__watermark-ico">
-				<a href="https://www.instagram.com/s2d1ent/" target="_blank"><img src="../src/instagram-photo-share-social-media_icon-icons.com_61427.png" class="footer__container__watermark-img"></a>
-				<a href="https://www.twitch.tv/s2d1ent" target="_blank"><img src="../src/1485968600-twitchsocialnetworkbrandlogo_78821.png" class="footer__container__watermark-img"></a>
-				<a href="https://twitter.com/s2d1ent" target="_blank"><img src="../src/twitter-social-media-bird_icon-icons.com_61430.png" class="footer__container__watermark-img" target="_blank"></a>
-				<a href="https://vk.com/vornfrosti" target="_blank"><img src="../src/Social-media-expand_VK-256.png" class="footer__container__watermark-img"></a>
+				<a href="https://www.instagram.com/s2d1ent/" target="_blank"><img src="src/instagram-photo-share-social-media_icon-icons.com_61427.png" class="footer__container__watermark-img"></a>
+				<a href="https://www.twitch.tv/s2d1ent" target="_blank"><img src="src/1485968600-twitchsocialnetworkbrandlogo_78821.png" class="footer__container__watermark-img"></a>
+				<a href="https://twitter.com/s2d1ent" target="_blank"><img src="src/twitter-social-media-bird_icon-icons.com_61430.png" class="footer__container__watermark-img" target="_blank"></a>
+				<a href="https://vk.com/vornfrosti" target="_blank"><img src="src/Social-media-expand_VK-256.png" class="footer__container__watermark-img"></a>
 			</div>
 		</div>
 		<div class="footer__container-menu">
@@ -277,13 +254,13 @@
 					<a class="footer__container__menu-li contfooter" >Меню</a>
 				</li>	
 				<li class="footer__container__menu-li">
-					<a class="footer__container__menu-li" href="../index.html">Главная</a>
+					<a class="footer__container__menu-li" href="index.html">Главное</a>
 				</li>
 				<li class="footer__container__menu-li">
-					<a class="footer__container__menu-li" href="../project.html">Проекты</a>
+					<a class="footer__container__menu-li" href="project.html">Проекты</a>
 				</li>
 				<li class="footer__container__menu-li">
-					<a class="footer__container__menu-li" href="../about.html">О нас</a>
+					<a class="footer__container__menu-li" href="about.html">О нас</a>
 				</li>
 			</ul>
 
@@ -292,13 +269,13 @@
 					<a class="footer__container__menu-li contfooter">Проекты</a>
 				</li>	
 				<li class="footer__container__menu-li">
-					<a class="footer__container__menu-li" href="oleg.html">OLEG</a>
+					<a class="footer__container__menu-li" href="game/oleg.html">OLEG</a>
 				</li>
 				
 			</ul>
 		</div>
 	</div>
 </footer>
-<script type="text/javascript" src="../scripts/main__secondlvl.js"></script>
+
 </body>
 </html>
