--- a/blog__layouts.html
+++ b/blog__layouts.html
@@ -7,8 +7,9 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,700;1,500&display=swap" rel="stylesheet">
 
-<link rel="stylesheet" href="style/blog__layouts.css">
 <link rel="stylesheet" href="style/header__and__footer.css">
+<link rel="stylesheet" href="style/blog__layouts.css">
+
 <link rel="shortcut icon" href="src/logo.png">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=1920">
@@ -39,16 +40,18 @@
 
 <section class="headertwo">
 	<div class="headertwo__container">	
-			<div class="headertwo__container-description">
-				<div class="headertwo__container-photo">
-					<div class="container__photo-black"></div>
-					<img src="src/stol-okno-noutbuk-kaktus-boke.jpg" class="container__photo-img"></div>
-					<div class="headertwo__container-title">НазваниеСтатьи</div>
-				<div class="headertwo__container-tags">
-					<div class="container__tags-tag">tag</div>
-				</div>
-				<div class="description__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+			<div class="container__banner">
+			<div class="banner__container">
+				<img src="src/article.jpg" class="banner__container-img">
+				<div class="banner__container-title">Статьz</div>
 			</div>
+			</div>
+			<div class="description">
+				<div class="description__text">	Здарова народ, сегодня был закончен редизайн сайта. Так как сайт максимально убого выглядел, мы решили его подкорректировать и сделать минималистичным и более каким-то, нормальным что ли. Редизайн сайта сделан на данный момент только под ПК версию сайта, поэтому с версией под телефоны придется временно подождать, так как под пк делалася не адаптивная, а масштабируемая верстка, придется немного помучаться с версткой под телефон.<br><br>
+					Так же мы возвращаемся к работе. В скоре мы приступим к доделыванию нашего проекта<a href="../game/oleg.html" style="color: #fff; text-decoration: underline;">OLEG</a>. И надеемся, что в скоре мы его завершим. По выходу игры мы собираемся игру дорабатывать дальше, так как нужно будет добавлять новые уровни, чтобы игра была не короткой.<br><br>
+				</div>
+			</div>		
+		
 	</div>
 </section>
 
@@ -106,6 +109,6 @@
 		</div>
 	</div>
 </footer>
-<script type="text/javascript" src="scripts/main__secondlvl.js"></script>
+
 </body>
 </html>
