--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
 
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,700;1,500&display=swap" rel="stylesheet">
-
+<script type="text/javascript" src="scripts/jquery.js"></script>
 <link rel="stylesheet" href="style/blog.css">
 <link rel="stylesheet" href="style/blog__mobile.css">
 <link rel="stylesheet" href="style/header__and__footer.css">
@@ -87,6 +87,8 @@
 							</li>
 							<li class="container__li-php_drop"><a  href="blog/html_bloki_tegi_i_ih_svyazka.html" class="container__li-php_drop">Блоки, теги и их связка.</a>
 							</li>
+							<li class="container__li-php_drop"><a  href="blog/html_selectory_class_id_name.html" class="container__li-php_drop">Селекторы. Class, id, name.</a>
+							</li>
 							</ul>
 					</li>
 					<li class="container__li-php">
@@ -99,8 +101,11 @@
 			</li>
 			<li class="selector__container-li">CSS
 				<ul class="container__ul-php ul-css">
-					<li class="container__li-php">
-						<a href="#" class="container__li-php">Введение</a>
+					<li class="container__li-php">Введение
+						<ul class="container__ul-php_drop ul-css_drop">
+							<li class="container__li-php_drop"><a  href="blog/css_what_is.html" class="container__li-php_drop">Что такое CSS?</a>
+							</li>
+							</ul>
 					</li>
 					<li class="container__li-php">
 						<a href="#" class="container__li-php">Анимации</a>
@@ -186,5 +191,6 @@
 	</div>
 </footer>
 <script type="text/javascript" src="scripts/main__firstlvl.js"></script>
+<script type="text/javascript" src="scripts/blog.js"></script>
 </body>
 </html>
