--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
 							<img src="src/article_jsm.jpg" class="block__little-img">
 							</div>
 						</a>
-						<a  href="blog/html_what_is.html">
+						<a  href="blog/css_what_is.html">
 							<div class="container__block__one-little  pink ">
-								<span class="center-pal">Что такое HTML?</span>
-								<img src="src/articlem.jpg" class="block__little-img">
+								<span class="center-pal">Что такое CSS?</span>
+								<img src="src/article_cssm.jpg" class="block__little-img">
 							</div>
 						</a>
 					</div>
