--- a/test.html
+++ b/test.html
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<script data-ad-client="ca-pub-6725342082633367" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-	<title>LazyCote team</title>
-
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,700;1,500&display=swap" rel="stylesheet">
-
 <link rel="stylesheet" href="style/header__and__footer.css">
-<link rel="stylesheet" href="style/blog__layouts.css">
-<link rel="stylesheet" href="style/blog_next_and_back_btn.css">
+
 
 <link rel="shortcut icon" href="src/logo.png">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="viewport" content="width=1920">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 <body>
@@ -39,243 +32,8 @@
 	</header>
 </section>
 
-<section class="headertwo">
-	<div class="headertwo__container">	
-			<div class="container__banner">
-			<div class="banner__container">
-				<img src="src/article.jpg" class="banner__container-img">
-				<div class="banner__container-title">Блоки, теги и их связка.</div>
-			</div>
-			</div>
-			<div class="description">
-				<div class="description__text">	
-					Блок в HTML, это неотьемлимая часть кода, он записывается как <span class="mark">&lt;div&gt;</span><span class="mark">&lt;/div&gt;</span>. Он имеет открывающий и закрывающий тег. 90% вашего кода, будет состоять из блоков, по той причине, что это удобно и практично. Главное правильно подписывать блоки и тогда вы точно не запутаетесь. О том как правильно подписывать блоки, вы можете прочитать в <a href="html_BEM" class="link-a">HTML -&gt; БЭМ.</a><br>
-				Для того чтобы объединить несколько элементов в один блок, стоит их просто вложить внутрь.<br>
-
-В кратце рассказал как объединять элементы в блоки, теперь перейдем к основным тегам, которыми вы будите очень часто пользоваться. Для того чтобы не писать открывающий и закрывающий тег, я буду в кратце записывать <span class="mark">&lt;div/&gt;</span>.<br>
-<span class="mark">&lt;div/&gt;</span> - блочный элемент, который объединяет в себе множество элементов, так же можно включать и сами <span class="mark">&lt;div&gt;</span>.<br>
-<span class="mark">&lt;p/&gt;</span> - параграф, в этот тег вы заключаете текс, который будет укладываться в одну строку. Для того чтобы сделать пробел на следующую строку вам понадобится тег <span class="mark">&lt;br&gt;</span>.
-<span class="mark">&lt;pre/&gt;</span> - этот тег выводи текст так, как вы его написали, то есть, он сохраняет все пробелы, которые вы допускали.<br>
-<span class="mark">&lt;h1-6/&gt;</span> - это тег заголовка, сейчас объясню почему я написал 1-6. У тега заголовка есть 6 уровней, из который самый большой это <span class="mark">&lt;h1/&gt;</span>. Как правило, <span class="mark">&lt;h1/&gt;</span>обозначается самый большой текст на странице и использоваться на странице, он должен 1 раз.<br>
-<span class="mark">&lt;span/&gt;</span> - вспомогательный тег, который встраивается в код, чтобы дополнить код. Добавить цвет, шрифт поменять и всё остальное что вы только сможете сделать.<br>
-<span class="mark">&lt;section/&gt;</span> - грубо говоря, тоже самое что и <span class="mark">&lt;div/&gt;</span>, но прописывая <span class="mark">&lt;section/&gt;</span> вам будет проще читать ваш код. Далее вы увидите конструкцию, в которой будут все перечисленный теги.<br>
-<span class="mark">&lt;style/&gt;</span> - это тег стилей, он записывается между тегами <span class="mark">&lt;head/&gt;</span>, с помощью этого тега можно будет накидать простенький дизайн. Вообще, использовать этот тег в коде это плохой тон, так как указывать стили для вашей страници стоит в отдельном css файле. О том как работать с CSS вы узнаете из нашего блога по CSS, как неожиданно это слышать.<br>
-<span class="mark">&lt;a/&gt; </span> - это тег ссылки, с помощью него вы можете указать ссылку на строний ресурс. Для того чтобы этот тег работал, у него стоит прописать атрибуты href и target, об атрибутах мы поговорим позже.<br>
-<span class="mark">&lt;img&gt; </span> - этот тег не имеет закрывающего тега, с помощью него вы сможете вывести картинку, для того чтобы это сделать вам понадобится атрибут src.<br>
-<span class="mark">&lt;ul/&gt; </span> - тег маркированного списка, в него вкладываются теги <span class="mark">&lt;li/&gt;</span>  в которые записываются значения.<br>
-Есть еще один тип списка.<br>
-<span class="mark">&lt;dl/&gt;</span>   - это тег списка определений, в него вкладываются такие теги как <span class="mark">&lt;dt/&gt; </span>  - он задает заголовок и <span class="mark">&lt;dd/&gt;</span>   – текст заголовка. Попробуйте оба списка и вы поймете в чем разница, хотя добиться такого же эффекта можно используя css. Что будет значительно удобнее, как по мне.<br>
-Ну что ж, я перечислил то, с чем вы будете часто встречаться в своей практике. Давайте перейдем к самой практике, но перед эти, расскажу про тег который указывают в <span class="mark">&lt;  head/&gt; </span> , о котором я забыл рассказать в прошлом блоге.<br>
-<span class="mark">&lt;meta charset=”utf-8"&gt;</span>   - с помощью тега <span class="mark">&lt;meta&gt;</span>  , мы можем задать множество разных параметров, но нас интересует именно charset=”utf-8". Не прописав этого, вы сломаете ваш сайт. UTF-8 – это кодировка символов, если вы ее не укажите, то на вашем сайте будут просто рандомные символы, но вы скажите –Но у меня и без него в браузере по прошлому курсу все было хорошо. Это то да, но когда вы зальете сайт на хост или кому-то скинете, то у вас все может полететь, и вам придется по быстрому с помощью Copy/Paste добавлять этот тег в начало вашего файла.<br>
-Что ж, эту вещь объяснил, теперь перейдем к практике. Запишем знакомую нам конструкцию:<br><br>
- <span class="mark">
-&lt;!DOCTYPE html&gt;  <br> 
-&lt;html&gt;   <br>
-&lt;head&gt;   <br>
-&lt;/head&gt;   <br>
-&lt;body&gt;   <br>
-&lt;/body&gt;   <br>
-&lt;/html&gt;   <br><br>
-</span>
-В которую мы постепенно будем добавлять те теги, о которых я вам сегодня рассказал. Начнем с указания кодировки, дадим название нашему сайту и создадим приветствующий заголовок. В языке HTML, как и в любом другом языке, присутствует комментарий, для того чтобы можно было подписывать код, чтобы допустим прийти через месяц к проекту и понять что тут и к чему, комментарий записывается как <span class="mark">&lt;!-- комментарий --&gt;</span>, для удобства я буду помечать комментариями что к чему.<br><br>
-<span class="mark">
-&lt;!DOCTYPE html&gt;   <br>
-&lt;html&gt;   <br>
-&lt;head&gt;   <br>
-&lt;/head&gt;   <br>
-&lt;meta charset=”utf-8"&gt; &lt;!—указали кодировку --&gt;,<br>
-&lt;title&gt; Страница сайта &lt;/title&gt; &lt;!—указали название нашей страницы --&gt;,<br>
-&lt;/head&gt;   <br>
-&lt;body&gt;   <br>
-&lt;h1&gt;Hello world! &lt;/h1&gt;&lt;!—создали приветствующий заголовок --&gt;,<br>
-&lt;/body&gt;<br>
-&lt;/html&lgt;<br><br>
-Дальше давайте создадим список, в котором мы запишем то, что мы уже сделали:<br><br>
-&lt;!DOCTYPE html&gt;   <br>
-&lt;html&gt;   <br>
-&lt;head&gt;   <br>
-&lt;/head&gt;   <br>
-&lt;meta charset=”utf-8"&gt; &lt;!—указали кодировку --&gt;,<br>
-&lt;title&gt; Страница сайта &lt;/title&gt; &lt;!—указали название нашей страницы --&gt;,<br>
-&lt;/head&gt;   <br>
-&lt;body&gt;   <br>
-&lt;h1&gt;Hello world! &lt;/h1&gt; &lt;!—создали приветствующий заголовок --&gt;,<br>
-&lt;ul&gt;<br>
-	&lt;li&gt;Кодировка&lt;/li&gt;<br>
-&lt;li&gt;Название страницы&lt;/li&gt;<br>
-&lt;li&gt;Приветствие&lt;/li&gt;<br>
-&lt;/ul&gt;<br>
-&lt;/body&gt;   <br>
-&lt;/html&lgt;<br><br>
-</span>
-Сразу же задание, создайте тоже самое, только с помощью списка определений. Конструкция приведена ниже:<br><br>
-<span class="mark">
-&lt;dl&gt;<br>
-	&lt;dd&gt;&lt;dd&gt;<br>
-&lt;/dl&gt;<br><br>
-</span>
-Теперь перейдем к блокам<span class="mark">&lt;div&gt;</span>. За частую, когда создается новая страница, в тег <span class="mark">&gt;body/&gt;</span> сразу же загоняют <span class="mark">&lt;div/&gt;</span>, который будет являться общим контейнером, но можно этого не делать и поступить по другому, начнем с первой конструкции.<br><br>
-<span class="mark">
-&lt;!DOCTYPE html&gt;   <br>
-&lt;html&gt;   <br>
-&lt;head&gt;   <br>
-&lt;/head&gt;   <br>
-&lt;meta charset=”utf-8"&gt; &lt;!—указали кодировку --&gt;,<br>
-&lt;title&gt; Страница сайта &lt;/title&gt; &lt;!—указали название нашей страницы --&gt;,<br>
-&lt;/head&gt;   <br>
-&lt;body&gt;   <br>
-&lt;h1&gt;Hello world! &lt;/h1&gt; &lt;!—создали приветствующий заголовок --&gt;,<br>
-&lt;ul&gt;<br>
-	&lt;li&gt;Кодировка&lt;/li&gt;<br>
-&lt;li&gt;Название страницы&lt;/li&gt;<br>
-&lt;li&gt;Приветствие&lt;/li&gt;<br>
-&lt;!—НА ЭТО МЕСТЕ ДОЛЖЕН БЫТЬ СПИСОК ОПРЕДЕЛЕНИЙ --&gt;<br>
-
-&lt;/ul&gt;<br>
-&lt;/body&gt;   <br>
-&lt;/html&lgt;<br><br>
-</span>
-Или же можно сделать все по секция, с помощью тега <span class="mark">&lt;section/&gt;</span>, как я уже говорил, это тоже самое что и <span class="mark">&lt;div/&gt;</span> только читать потом будет проще. Создадим конструкцию с несколькими секциями, внутри которых будет по 2 блока с верхней и нижней частью секции:<br><br>
-<span class="mark">
-&lt;!DOCTYPE html&gt;   <br>
-&lt;html&gt;   <br>
-&lt;head&gt;   <br>
-&lt;/head&gt;   <br>
-&lt;meta charset=”utf-8"&gt; &lt;!—указали кодировку --&gt;,<br>
-&lt;title&gt; Страница сайта &lt;/title&gt; &lt;!—указали название нашей страницы --&gt;,<br>
-&lt;/head&gt;   <br>
-&lt;body&gt;   <br>
-&lt;div&gt;<br>
-&lt;h1&gt;Hello world! &lt;/h1&gt; &lt;!—создали приветствующий заголовок --&gt;,<br>
-&lt;ul&gt;<br>
-	&lt;li&gt;Кодировка&lt;/li&gt;<br>
-&lt;li&gt;Название страницы&lt;/li&gt;<br>
-&lt;li&gt;Приветствие&lt;/li&gt;<br>
-&lt;!—НА ЭТО МЕСТЕ ДОЛЖЕН БЫТЬ СПИСОК ОПРЕДЕЛЕНИЙ --&gt;<br>
-
-&lt;/ul&gt;<br>
-&lt;/div&gt;<br>
-&lt;/section&gt;<br>
-&lt;section&gt;<br>
-&lt;div&gt;<br>
-&lt;h1&gt;Hello world 2 ! &lt;/h1&gt; &lt;!—создали приветствующий заголовок --&gt;,<br>
-&lt;ul&gt;<br>
-	&lt;li&gt;Создали секцию&lt;/li&gt;<br>
-&lt;li&gt;Создали блок внутри секции&lt;/li&gt;<br>
-&lt;/ul&gt;<br>
-&lt;/div&gt;<br>
-&lt;/section&gt;<br>
-
-&lt;/body&gt;   <br>
-&lt;/html&lgt;<br><br>
-</span>
-Блоки и секции применяются для объединения элементов в один большой объект с кучей мелких объектов, которыми можно будет просто управлять. Для начала вы можете использовать только блоки, без использования секций.<br>
-Давайте рассмотрим текстовые теги, текст так же можно писать в блок, то есть. Вы можете не указывать тег <span class="mark">&lt;p/&gt;</span> и др, а сразу писать в <span class="mark">&lt;div/&gt;</span><br><br>
-<span class="mark">
-&lt;!DOCTYPE html&gt;   <br>
-&lt;html&gt;   <br>
-&lt;head&gt;   <br>
-&lt;/head&gt;   <br>
-&lt;meta charset=”utf-8"&gt; &lt;!—указали кодировку --&gt;,<br>
-&lt;title&gt; Страница сайта &lt;/title&gt; &lt;!—указали название нашей страницы --&gt;,<br>
-&lt;/head&gt;   <br>
-&lt;body&gt;   <br>
-&lt;div&gt;<br>
-&lt;h1&gt;Hello world 2 ! &lt;/h1&gt; &lt;!—создали приветствующий заголовок --&gt;,<br>
-&lt;p&gt; Параграф, это тег, в который записывается текст, как ни старайся ставить пробелы<br><br><br>
-
-
-Он<br><br>
-
-Всё-равно<br><br>
-
-Запишет всё в строку &lt;/p&gt;<br>
-&lt;pre&gt; Здесь, вы можете записывать ваш отформатированный текст.<br>
-Даже если он располагается на нескольких строчках.<br>
-Для этого тега, это абсолютно не важно.<br>
-&lt;pre&gt;<br>
-&lt;span&gt;Тег подручный, который можно встроить в текст&lt;/span&gt;<br>
-&lt;/div&gt;<br>
-&lt;div&gt;<br>
-&lt;a href-“vk.com/vornfrosti” &gt;Вконтакте&lt;/a&gt;<br>
-&lt;img src=”http://ru.wallfon.com/walls/animals/kitten-8714.jpg” &gt;<br>
-&lt;/div&gt;<br>
-&lt;/body&gt;   <br>
-&lt;/html&gt;<br><br>
-</span>
-Подведем итоги, сегодня мы изучили теги: блок, секция, фото, ссылка и различные теги текста. Возможно, поняли как устроены блоки и как в них что встраивать. Когда перейдем к HTML+CSS, смысл блоков и секций будет более ясен.<br><br>
-
-<span class="link">
-<a target="_blank" href="https://developer.mozilla.org/en-US/docs/Glossary/WebDAV" class="link-a">developer.mozilla.org</a>
-<a target="_blank" href="http://htmlbook.ru/" class="link-a">htmlbook.ru</a>
-</span>
-				</div>
-					<div class="btn_container">
-					<!-- ../style/blog_next_and_back_btn.css -->
-					<!-- ../style/blog_next_btn.css -->
-						<div class="btn-back"><a href="html_what_is.html"><div class="btn-left">НАЗАД</div></a></div>
-						<div class="btn-back"><a href="#"><div class="btn-right">ДАЛЬШЕ</div></a></div>
-					</div>
-				</div>
-			</div>		
-		
-	</div>
-</section>
-
-<footer class="footer">
-	<div class="footer__container">
-		<div class="footer__container-watermark">
-			<div class="footer__container__watermark-title">©s2d1ent - 2020</div>
-			<div class="footer__container__watermark-ico">
-				<a href="https://www.instagram.com/s2d1ent/" target="_blank"><img src="src/instagram-photo-share-social-media_icon-icons.com_61427.png" class="footer__container__watermark-img"></a>
-				<a href="https://www.twitch.tv/s2d1ent" target="_blank"><img src="src/1485968600-twitchsocialnetworkbrandlogo_78821.png" class="footer__container__watermark-img"></a>
-				<a href="https://twitter.com/s2d1ent" target="_blank"><img src="src/twitter-social-media-bird_icon-icons.com_61430.png" class="footer__container__watermark-img" target="_blank"></a>
-				<a href="https://vk.com/vornfrosti" target="_blank"><img src="src/Social-media-expand_VK-256.png" class="footer__container__watermark-img"></a>
-			</div>
-		</div>
-		<div class="footer__container-menu">
-			<ul class="footer__container__menu-ul">
-				<li class="footer__container__menu-li">
-					<a class="footer__container__menu-li contfooter" >Контакты</a>
-				</li>	
-				<li class="footer__container__menu-li">
-					<a class="footer__container__menu-li" href="https://s2d1ent.github.io/LazyCote/">WebSite</a>
-				</li>
-				<li class="footer__container__menu-li">
-					<a class="footer__container__menu-li" href="https://play.google.com/store/apps/dev?id=6685879304870517076">GoogleDev</a>
-				</li>
-				<li class="footer__container__menu-li">
-					<a class="footer__container__menu-li">lcilyavitya@gmail.com</a>
-				</li>
-			</ul>
-
-			<ul class="footer__container__menu-ul">
-				<li class="footer__container__menu-li">
-					<a class="footer__container__menu-li contfooter" >Меню</a>
-				</li>	
-				<li class="footer__container__menu-li">
-					<a class="footer__container__menu-li" href="index.html">Главное</a>
-				</li>
-				<li class="footer__container__menu-li">
-					<a class="footer__container__menu-li" href="project.html">Проекты</a>
-				</li>
-				<li class="footer__container__menu-li">
-					<a class="footer__container__menu-li" href="about.html">О нас</a>
-				</li>
-			</ul>
-
-			<ul class="footer__container__menu-ul">
-				<li class="footer__container__menu-li">
-					<a class="footer__container__menu-li contfooter">Проекты</a>
-				</li>	
-				<li class="footer__container__menu-li">
-					<a class="footer__container__menu-li" href="game/oleg.html">OLEG</a>
-				</li>
-				
-			</ul>
-		</div>
-	</div>
-</footer>
-
+<script type="text/javascript">
+	alert("Ширина вашего экрана = "+innerWidth)
+</script>
 </body>
 </html>
