--- a/blog.html
+++ b/blog.html
@@ -85,9 +85,11 @@
 							<ul class="container__ul-php_drop ul-html_drop">
 							<li class="container__li-php_drop"><a  href="blog/html_what_is.html" class="container__li-php_drop">Что такое HTML?</a>
 							</li>
-							<li class="container__li-php_drop"><a  href="blog/html_bloki_tegi_i_ih_svyazka.html" class="container__li-php_drop">Блоки, теги и их связка.</a>
+							<li class="container__li-php_drop"><a  href="blog/html_sozdanie_form.html" class="container__li-php_drop">Блоки, теги и их связка</a>
 							</li>
-							<li class="container__li-php_drop"><a  href="blog/html_selectory_class_id_name.html" class="container__li-php_drop">Селекторы. Class, id, name.</a>
+							<li class="container__li-php_drop"><a  href="blog/html_selectory_class_id_name.html" class="container__li-php_drop">Селекторы. Class, id, name</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="blog/html_selectory_class_id_name.html" class="container__li-php_drop">Создание форм</a>
 							</li>
 							</ul>
 					</li>
