--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 							<img src="src/articlem.jpg" class="block__little-img">
 						</div>
 						</a>
-						<a  href="blog/js_what_is.html">
-							<div class="container__block__one-little light-pink "><span class="center-pal">Что такое JavaScript ?</span>
-							<img src="src/article_jsm.jpg" class="block__little-img">
+						<a  href="blog/html_sozdanie_form.html">
+							<div class="container__block__one-little light-pink "><span class="center-pal">Создание форм</span>
+							<img src="src/articlem.jpg" class="block__little-img">
 							</div>
 						</a>
 					</div>
