--- a/blog.html
+++ b/blog.html
@@ -64,9 +64,9 @@
 		<ul class="selector__container-ul">
 			<li class="selector__container-li">C#</li>
 			<li class="selector__container-li">JS
-				<ul class="container__ul-php ul-js">
+				<ul class="container__ul-php">
 					<li class="container__li-php">Введение
-							<ul class="container__ul-php_drop ul-js_drop">
+							<ul class="container__ul-php_drop ">
 							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">Что такое JavaScript?</a>
 							</li>
 							<li class="container__li-php_drop"><a  href="blog/js_kak_podluchit.html" class="container__li-php_drop">Как подключить?</a>
@@ -80,31 +80,36 @@
 				</ul>
 			</li>
 			<li class="selector__container-li">HTML
-				<ul class="container__ul-php ul-html">
+				<ul class="container__ul-php">
 					<li class="container__li-php">Введение
-							<ul class="container__ul-php_drop ul-html_drop">
+							<ul class="container__ul-php_drop">
 							<li class="container__li-php_drop"><a  href="blog/html_what_is.html" class="container__li-php_drop">Что такое HTML?</a>
 							</li>
 							<li class="container__li-php_drop"><a  href="blog/html_sozdanie_form.html" class="container__li-php_drop">Блоки, теги и их связка</a>
 							</li>
 							<li class="container__li-php_drop"><a  href="blog/html_selectory_class_id_name.html" class="container__li-php_drop">Селекторы. Class, id, name</a>
 							</li>
-							<li class="container__li-php_drop"><a  href="blog/html_selectory_class_id_name.html" class="container__li-php_drop">Создание форм</a>
+							<li class="container__li-php_drop"><a  href="blog/html_sozdanie_form.html" class="container__li-php_drop">Создание форм</a>
 							</li>
+
 							</ul>
 					</li>
 					<li class="container__li-php">
-						<a  href="#" class="container__li-php">БЭМ</a>
+						<a class="container__li-php">Навигация	
+						</a>	
 					</li>
 					<li class="container__li-php">
-						<a  href="#" class="container__li-php">Работа с медиа</a>
+						<a class="container__li-php">БЭМ</a>
+					</li>
+					<li class="container__li-php">
+						<a class="container__li-php">Работа с медиа</a>
 					</li>
 				</ul>
 			</li>
 			<li class="selector__container-li">CSS
-				<ul class="container__ul-php ul-css">
+				<ul class="container__ul-php">
 					<li class="container__li-php">Введение
-						<ul class="container__ul-php_drop ul-css_drop">
+						<ul class="container__ul-php_drop">
 							<li class="container__li-php_drop"><a  href="blog/css_what_is.html" class="container__li-php_drop">Что такое CSS?</a>
 							</li>
 							</ul>
@@ -118,7 +123,7 @@
 				</ul>
 			</li>
 			<li class="selector__container-li">PHP
-				<ul class="container__ul-php ul-php">
+				<ul class="container__ul-php">
 					<li class="container__li-php">
 						<a href="#" class="container__li-php">Введение</a>
 					</li>
